Bug 470468: Message Header Pane: Subject should be BOLD in both expanded & collapsed  states. ui-r=clarkbw, r=dmose

--- a/mail/themes/gnomestripe/mail/messageHeader.css
+++ b/mail/themes/gnomestripe/mail/messageHeader.css
@@ -128,6 +128,10 @@ header-view-button-box {
   padding-top: 0.5em;
 }
 
+#expandedsubjectBox > .headerValue {
+  font-weight: bold;
+}
+
 /* ::::: edit message bar ::::: */
 
 #editMessageBox
