--- a/mail/themes/pinstripe/mail/messageHeader.css
+++ b/mail/themes/pinstripe/mail/messageHeader.css
@@ -164,6 +164,10 @@ header-view-button-box {
   padding-top: 0.5em;
 }
 
+#expandedsubjectBox > .headerValue {
+  font-weight: bold;
+}
+
 /* ::::: edit message bar ::::: */
 
 #editMessageBox
